--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.range-slider {
+  appearance: none;
+  width: 100%;
+  height: 1rem;
+  background-color: #9d968e;
+}
+
+.range-slider::-webkit-slider-thumb {
+  appearance: none;
+  width: 2rem;
+  height: 1rem;
+  cursor: pointer;
+}
