--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   appearance: none;
   width: 100%;
   height: 1rem;
-  background-color: #9d968e;
+  background-color: #9c9c9c80;
 }
 
 .range-slider::-webkit-slider-thumb {
@@ -14,4 +14,14 @@
   width: 2rem;
   height: 1rem;
   cursor: pointer;
+}
+
+.img {
+  animation: rotate 20s linear;
+  animation-iteration-count: infinite;
+  animation-play-state: paused;
+}
+
+.img.playing {
+  animation-play-state: running;
 }
