--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,12 @@
   width: 100%;
   height: 1rem;
   background-color: #9c9c9c80;
-  border-radius: 0.5rem; /* Tạo bo tròn cho thanh trượt */
-  overflow: hidden; /* Đảm bảo không có khoảng trắng thừa */
   position: relative; /* Cần thiết cho phần thanh trượt gradient bên trên */
 }
 
 .range-slider::-webkit-slider-thumb {
   appearance: none;
-  width: 2rem;
+  width: 0;
   height: 1rem;
   cursor: pointer;
   background-color: transparent; /* Làm nền trong suốt để chỉ thấy phần trên */
@@ -28,8 +26,6 @@
   width: 100%;
   height: 1rem;
   background-color: #9c9c9c80;
-  border-radius: 0.5rem;
-  overflow: hidden;
 }
 
 .animation-spin-slow {
